# SMA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake
src/: datatypes.h  memoryheader.h  memoryheaders.h  smalib.c  smalib.h  smallocator.c  smallocator.h
src/public/: datatypes.h  smalib.h  smallocator.h
